--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -248,3 +248,32 @@
     cursor: pointer;
 }
 
+.settinglinks{
+    text-align: center;
+    padding: 13px;
+    border-bottom: 1px solid rgb(218, 218, 218);
+    cursor: pointer;
+}
+
+.settinglinks:hover{
+    background-color: rgb(228, 228, 228);
+ }
+
+.settinglinkslast{
+    text-align: center;
+    padding: 13px;
+    cursor: pointer;
+}
+.settinglinkslast:hover{
+  
+    background-color: rgb(228, 228, 228);
+ }
+.innerdropdownmobile{
+    width: 219%;
+    height: 81vh;
+    border-radius: 13px;
+    box-shadow: 1px 1px 13px #c6c5c5;
+    margin-top: 228%;
+    margin-left: -180%;
+}
+ 
