--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,11 +1,11 @@
 <mat-progress-bar *ngIf="showloader" mode="indeterminate" color="accent"></mat-progress-bar>
 
-<div style="width: 50%;margin: 30px auto;" class="row">
+<div [ngStyle]="{'width': mobileview?'90%':'50%','margin':'30px auto'}" class="row">
 
-    <div style="height: 85vh;" class="col">
+    <div style="height: 85vh;" class="col" *ngIf="!mobileview"> 
        <img src="../../assets/loginimage.png" style="width: 108%;height: 85vh;position: relative;margin-left: -37px;" />
     </div>
-    <div class="col">
+    <div class="col" style="margin-left: 5%;">
     <div style="
     width: 100%;
 " class="row">
@@ -14,7 +14,7 @@
         height: 59vh;
         border: 1px solid #c9c8c8;
     ">
-    <div> <img src="../../assets/loginlogo.png" style="height: 55px;padding-left: 25%;margin-top: 50px;margin-bottom: 22px;"/></div>
+    <div> <img src="../../assets/loginlogo.png" [ngStyle]="{'height': '55px','padding-left':mobileview?'19%':'25%','margin-top': '50px','margin-bottom': '22px'}"/></div>
    
          <form style="
          width: 90%;
@@ -40,16 +40,14 @@
     </form> 
 </div>
     </div>
-    <div style="
-    border: 1px solid #c2c2c2;
-    width: 100%;
-    height: 61px;
-    margin-top: 12px;
+    <div [ngStyle]="{
+    'border': '1px solid #c2c2c2',
+    'width': mobileview?'100%':'',
+    'height': '61px',
+    'margin-top': '12px'}
 " class="row">
 
-<p style="
-margin: 17px 48px;
-">Don't have an account? <a style="
+<p [ngStyle]="{'margin':mobileview?'17px 33px':'17px 48px'}" >Don't have an account? <a style="
     text-decoration: none;
 " routerLink="/signup">Sign up</a></p>
     </div>
