--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -57,8 +57,8 @@
       </div>
    
       <div *ngIf="homeoptionselected && mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
-         <div style=" margin-top: 29px;">
-            <div class="postboxmobile" *ngFor="let postdata of sortData(); index as i">
+         <div style=" margin-top: 29px;" infiniteScroll [infiniteScrollDistance]="2" [infiniteScrollThrottle]="500" (scrolled)="onScroll()" [scrollWindow]="false">
+            <div class="postboxmobile" *ngFor="let postdata of sortData(); index as i" >
               <div class="row userdetail">
                 <div class="inneruserdetail" style="display: flex;">
                  <span><img [src]="postdata.profileurl" class="postsimage"></span>
@@ -95,12 +95,16 @@
                
             </div>
 
-         </div>
+        <div *ngIf="fetchingdata">Loading</div>
+          </div>
       </div>
 
 
       <div *ngIf="homeoptionselected && !mobileview" [ngStyle]="{'height': '200vh','margin-left':!homepageformobile?'250px':''}" class="col-6">
-        <div style=" margin-top: 29px;">
+        <div style=" margin-top: 29px;" infiniteScroll
+        [infiniteScrollDistance]="2"
+        [infiniteScrollThrottle]="500"
+        (scrolled)="onScroll()">
         
            <div class="postbox" [ngStyle]="{'margin-bottom': postdata.postcaption.length>100?'201px':'126px'}" *ngFor="let postdata of sortData(); index as i">
             <div class="row userdetail">
@@ -140,6 +144,8 @@
                </div>
            
         </div>
+
+        <div *ngIf="fetchingdata">Loading</div>
         </div>
      </div>
 
